# VAE_anomaly_detection

./: .gitignore  VAE.py  VAE_tf1.py  anaconda-project.yml  dataset.py  pyproject.toml  readme.md  requirements.txt  setup.py  train.py
.github/workflows/: python-package-on-release.yml  python-publish-on-release.yml  python-publish-on-testpypi-pre-release.yml  python-test-all-os-on-pre-release.yml  python-test-all-os-on-release.yml  python-test-build.yml  python-test.yml
model/: VAE.py  VAE_tf1.py  __init__.py  encoder_decoder.py
tests/: test_pytorch_model.py  test_training.py
vae_anomaly_detection/: VAE.py  train.py
