[tool.poetry]
name = "vae_anomaly_detection"
version = "1.1.0"
description = "Pytorch/TF1 implementation of Variational AutoEncoder for anomaly detection following the paper \"Variational Autoencoder based Anomaly Detection using Reconstruction Probability by Jinwon An, Sungzoon Cho\""
authors = ["Michele De Vita <mik3dev@gmail.com>"]
homepage = "https://github.com/Michedev/VAE_anomaly_detection"
repository = "https://github.com/Michedev/VAE_anomaly_detection"
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.6',
]
keywords = ["vae", "anomaly detection", "deep learning", "pytorch"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6.2<3.10"
path = ">=15.0"
torch = ">=1.8.0%2Bcpu"
pytorch-ignite = ">=0.4"
PyYAML = ">=5.0"
tqdm = ">=4.0"
tensorboard = ">=0.20"
numpy = ">= 1.18"

[tool.poetry.dev-dependencies]
pytest = ">=7.0"

[[tool.poetry.source]]
name = "torch-repo"
url = "https://eternalphane.github.io/pytorch-pypi/torch/"  # hacky way to install pytorch
secondary = true


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
